// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<div
  className="Tabs"
>
  <ul>
    <li
      className=""
      key="0"
      onClick={[Function]}
    >
      <a>
        <span>
          test
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`matches enzyme snapshots matches snapshot 2`] = `
<div
  className="Tabs vertical borderless wide small right-align"
>
  <ul>
    <li
      className=""
      key="0"
      onClick={[Function]}
    >
      <a>
        <span>
          test
        </span>
      </a>
    </li>
  </ul>
</div>
`;
